--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 *,*::after,*::before{
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 .app_conteiner{
   height: 100vh;
@@ -14,11 +17,23 @@
   justify-content: center;
   align-items: center;
 }
-input{
-  margin: .2rem;
+.selection-field{
+  padding: .4rem;
+  display: flex;
 }
-.selection_type{
-  background-color: white;
+.selection-field label{
+  margin: 0 .2rem;
+  padding: .2rem;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  border-radius: .6rem;
+  border: solid 1px grey;
+  text-transform: uppercase;
+  font-size: .75rem;
+}
+.selection-field input{
+  margin-bottom: .25rem;
 }
 .output_selection{
   height: 50%;
